--- a/index.html
+++ b/index.html
@@ -3,177 +3,276 @@
 <head>
   <meta charset="UTF-8">
   <title>포트폴리오 | 유승환</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      max-width: 900px; 
-      margin: 40px auto; 
-      padding: 0 20px; 
-      line-height: 1.6; 
-      color: #333;
+    :root {
+      --primary: #2563eb;
+      --secondary: #1e293b;
+      --bg: #f8fafc;
+      --card-bg: #ffffff;
+      --border: #e5e7eb;
+      --text-main: #0f172a;
+      --text-sub: #475569;
+      --radius: 14px;
     }
-    h1, h2, h3 { color: #2d6cdf; }
-    .section { margin-bottom: 50px; }
-    .project { margin-bottom: 30px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 8px; }
-    ul { padding-left: 20px; }
-    .label { color: #555; font-size: 14px; }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Pretendard', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: var(--bg);
+      color: var(--text-main);
+      line-height: 1.7;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 80px 24px;
+    }
+
+    /* ---------- TYPOGRAPHY ---------- */
+    h1 {
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 26px;
+      margin-bottom: 24px;
+      border-left: 5px solid var(--primary);
+      padding-left: 14px;
+    }
+
+    h3 {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    h4 {
+      font-size: 16px;
+      margin-top: 24px;
+      margin-bottom: 8px;
+      color: var(--secondary);
+    }
+
+    p {
+      color: var(--text-sub);
+      margin: 0 0 12px;
+    }
+
+    strong {
+      color: var(--text-main);
+      font-weight: 600;
+    }
+
+    ul {
+      padding-left: 18px;
+      margin: 8px 0 0;
+      color: var(--text-sub);
+    }
+
+    li {
+      margin-bottom: 6px;
+    }
+
+    /* ---------- HEADER ---------- */
+    .intro {
+      background: linear-gradient(135deg, #2563eb, #1e40af);
+      color: white;
+      padding: 56px;
+      border-radius: var(--radius);
+      margin-bottom: 60px;
+    }
+
+    .intro h1 {
+      color: white;
+    }
+
+    .intro p {
+      color: #e0e7ff;
+      max-width: 720px;
+    }
+
+    /* ---------- SECTION ---------- */
+    .section {
+      margin-bottom: 70px;
+    }
+
+    /* ---------- CONTACT ---------- */
+    .contact-box {
+      background: var(--card-bg);
+      padding: 28px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+    }
+
+    /* ---------- SKILLS ---------- */
+    .skill-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 24px;
+    }
+
+    .skill-card {
+      background: var(--card-bg);
+      padding: 24px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+    }
+
+    /* ---------- PROJECT ---------- */
+    .project {
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      padding: 32px;
+      border: 1px solid var(--border);
+      margin-bottom: 32px;
+    }
+
+    .project-title {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      margin-bottom: 16px;
+    }
+
+    .tech-label {
+      font-size: 14px;
+      color: var(--primary);
+      font-weight: 500;
+    }
+
+    /* ---------- FOOTER NOTE ---------- */
+    .muted {
+      color: #94a3b8;
+      font-size: 14px;
+    }
+
+    @media (max-width: 768px) {
+      h1 { font-size: 28px; }
+      h2 { font-size: 22px; }
+    }
   </style>
 </head>
 <body>
 
-  <!-- ========================= -->
-  <!--   HEADER / INTRO          -->
-  <!-- ========================= -->
-  <h1>기술 중심형 서비스 기획자 포트폴리오</h1>
-  <p>
-    기술 기반의 문제 해결과 실제 서비스 구현 경험을 바탕으로,
-    <strong>기획과 개발을 연결하는 기술 중심형 서비스 기획자</strong>를 목표로 하고 있습니다.<br>
-    프론트엔드, 백엔드, AI/ML 기술 전반을 이해하며 사용자 경험과 기술 구조를 함께 고려한
-    실용적인 서비스 설계를 지향합니다.
-  </p>
+  <div class="container">
 
-  <!-- ========================= -->
-  <!--   CONTACT                 -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>📬 연락처</h2>
-    <p>Email: <strong>yush08222@gmail.com</strong></p>
-  </div>
-
-  <!-- ========================= -->
-  <!--   SKILLS                  -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>🛠 기술 스택</h2>
-
-    <h3>프론트엔드</h3>
-    <ul>
-      <li>React, TypeScript</li>
-      <li>TailwindCSS</li>
-      <li>HTML, CSS, JavaScript</li>
-    </ul>
-
-    <h3>백엔드</h3>
-    <ul>
-      <li>MySQL</li>
-      <li>Docker</li>
-      <li>Spring Boot (학습 중)</li>
-    </ul>
-
-    <h3>AI / ML</h3>
-    <ul>
-      <li>Python</li>
-      <li>FastAPI</li>
-    </ul>
-  </div>
-
-  <!-- ========================= -->
-  <!--   CORE COMPETENCIES       -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>💡 희망 직종: 기술 중심형 서비스 기획자</h2>
-    <p>
-      기술 구조를 이해하는 기획은 서비스 완성도와 실행 가능성을 크게 좌우합니다.  
-      저는 실제 개발환경에서의 데이터를 바탕으로 기능 흐름과 기술 구조를 설계하는 것을 강점으로 합니다.
-      프론트엔드 UI·UX 구현 경험, AI API 연동, 데이터 흐름 설계 경험이 있기 때문에
-      개발자와의 커뮤니케이션에서 명확하고 현실적인 기획을 할 수 있습니다.
-    </p>
-    <h3>핵심 역량</h3>
-    <ul>
-      <li>기획 → 디자인 → 개발 흐름 전체를 이해하고 연결</li>
-      <li>React 기반 UI/UX 설계 및 프로토타이핑 가능</li>
-      <li>AI·백엔드 구조를 고려한 기능 정의서/플로우 차트 작성 가능</li>
-      <li>사용자경험 중심의 서비스 문제 정의 및 개선 능력</li>
-      <li>기술적으로 “구현 가능한 기획”을 설계하는 능력</li>
-    </ul>
-  </div>
-
-  <!-- ========================= -->
-  <!--   PROJECTS                -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>📂 대표 프로젝트</h2>
-
-    <!-- PROJECT 1: WithPet -->
-    <div class="project">
-      <h3>1. WithPet — AI 기반 유기동물 입양 플랫폼</h3>
-      <p class="label">React, Spring Boot, MySQL, Docker, FastAPI, Python</p>
-
-      <h4>프로젝트 소개</h4>
+    <!-- INTRO -->
+    <div class="intro">
+      <h1>기술 중심형 서비스 기획자 포트폴리오</h1>
       <p>
-        유기동물의 입양 확률을 높이기 위해 AI 이미지 생성, 사용자–동물 합성, 보호소 리뷰,
-        AI 추천 챗봇 등을 제공하는 종합 입양 서비스 플랫폼입니다.
-      </p>
-
-      <h4>내가 맡은 역할</h4>
-      <ul>
-        <li>React 기반 주요 UI 컴포넌트 개발 (AI 이미지 생성, 채팅 모듈 등)</li>
-        <li>FastAPI 기반 AI 이미지 생성 서버 구축</li>
-        <li>Docker Compose로 백엔드–AI 서버–DB 연결 구조 설정</li>
-        <li>Firebase 스토리지 이미지 업로드/관리 기능 구현</li>
-        <li>AI 챗봇(입양 매칭) 설계 및 프론트엔드 연동</li>
-      </ul>
-
-      <h4>결과 및 성과</h4>
-      <ul>
-        <li>입양을 고민하는 사용자에게 “입양 후 모습”을 AI로 시각화하여 서비스 만족도 향상</li>
-        <li>유기동물 정보 탐색, 추천, 보호소 리뷰, 채팅까지 단일 플랫폼에서 구현</li>
-      </ul>
-
-      <h4>느낀 점</h4>
-      <p>
-        서비스 전체 흐름(기획 → 프론트엔드 → 백엔드 → AI 연동)을 모두 파악하며  
-        기획 단계에서 기술 제약을 고려해야 한다는 점을 깊이 이해하게 되었습니다.  
-        또한 실제 사용자 여정을 생각하면서 기능 배치를 설계하는 과정이 기획자로서의 역량을 강화시켰습니다.
+        기술 기반의 문제 해결과 실제 서비스 구현 경험을 바탕으로  
+        <strong>기획과 개발을 연결하는 기술 중심형 서비스 기획자</strong>를 목표로 합니다.<br>
+        프론트엔드·백엔드·AI 전반을 이해하며 실행 가능한 서비스 설계를 지향합니다.
       </p>
     </div>
 
-    <!-- PROJECT 2: Secret Messenger -->
-    <div class="project">
-      <h3>2. 007 Secret Messenger — 암호화 기반 비밀 메신저</h3>
-      <p class="label">서버프로그래밍 강의 프로젝트</p>
-
-      <h4>프로젝트 소개</h4>
-      <p>
-        텍스트 데이터를 암호화하여 송·수신하는 간단한 비밀 메신저 서비스입니다.
-        메시지를 안전하게 주고받는 경험을 구현하는 데 집중했습니다.
-      </p>
-
-      <h4>내가 맡은 역할</h4>
-      <ul>
-        <li>전체 기능 흐름 설계(메시지 암호화 → 전송 → 복호화 과정)</li>
-        <li>클라이언트 UI 구조 설계</li>
-        <li>서버와의 데이터 처리 방식 정의</li>
-      </ul>
-
-      <h4>결과 및 성과</h4>
-      <ul>
-        <li>메시지를 암호화하는 핵심 로직을 성공적으로 구현</li>
-        <li>“데이터 흐름을 이해하는 기획”의 중요성을 실감</li>
-      </ul>
-
-      <h4>느낀 점</h4>
-      <p>
-        간단한 규모의 프로젝트였지만 서버와 클라이언트 간 데이터 흐름을 설계하는 경험을 얻었습니다.
-        기술적 제약을 이해하는 것이 좋은 기획의 핵심임을 다시 느꼈습니다.
-      </p>
+    <!-- CONTACT -->
+    <div class="section">
+      <h2>📬 연락처</h2>
+      <div class="contact-box">
+        <p><strong>Email</strong> · yush08222@gmail.com</p>
+      </div>
     </div>
-  </div>
 
-  <!-- ========================= -->
-  <!--   EXPERIENCE              -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>📘 경력 / 활동</h2>
-    <p>추후 추가 예정</p>
-  </div>
+    <!-- SKILLS -->
+    <div class="section">
+      <h2>🛠 기술 스택</h2>
 
-  <!-- ========================= -->
-  <!--   CERTIFICATIONS          -->
-  <!-- ========================= -->
-  <div class="section">
-    <h2>📑 자격증</h2>
-    <p>추후 추가 예정</p>
+      <div class="skill-grid">
+        <div class="skill-card">
+          <h3>프론트엔드</h3>
+          <ul>
+            <li>React, TypeScript</li>
+            <li>TailwindCSS</li>
+            <li>HTML, CSS, JavaScript</li>
+          </ul>
+        </div>
+
+        <div class="skill-card">
+          <h3>백엔드</h3>
+          <ul>
+            <li>MySQL</li>
+            <li>Docker</li>
+            <li>Spring Boot (학습 중)</li>
+          </ul>
+        </div>
+
+        <div class="skill-card">
+          <h3>AI / ML</h3>
+          <ul>
+            <li>Python</li>
+            <li>FastAPI</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- CORE -->
+    <div class="section">
+      <h2>💡 희망 직종</h2>
+      <p>
+        기술 구조를 이해하는 기획은 실행 가능성과 완성도를 결정합니다.  
+        저는 개발 경험을 기반으로 기능 흐름, 데이터 구조, UI/UX를 함께 설계합니다.
+      </p>
+      <ul>
+        <li>기획–디자인–개발 전체 흐름 이해</li>
+        <li>기술 제약을 반영한 기능 정의</li>
+        <li>개발자와 바로 통하는 기획 커뮤니케이션</li>
+      </ul>
+    </div>
+
+    <!-- PROJECTS -->
+    <div class="section">
+      <h2>📂 대표 프로젝트</h2>
+
+      <div class="project">
+        <div class="project-title">
+          <h3>WithPet — AI 기반 유기동물 입양 플랫폼</h3>
+          <span class="tech-label">React · Spring Boot · FastAPI · Docker · MySQL</span>
+        </div>
+
+        <h4>역할</h4>
+        <ul>
+          <li>React UI 개발 및 UX 설계</li>
+          <li>FastAPI 기반 AI 이미지 서버 구축</li>
+          <li>Docker 기반 서비스 구조 설계</li>
+          <li>AI 챗봇 기획 및 연동</li>
+        </ul>
+
+        <h4>성과</h4>
+        <p>
+          입양 전 모습을 AI로 시각화하여 사용자 몰입도와 서비스 만족도를 향상시켰습니다.
+        </p>
+      </div>
+
+      <div class="project">
+        <div class="project-title">
+          <h3>007 Secret Messenger — 암호화 메신저</h3>
+          <span class="tech-label">Server Programming</span>
+        </div>
+
+        <h4>역할</h4>
+        <ul>
+          <li>암호화/복호화 흐름 설계</li>
+          <li>클라이언트 UI 구조 기획</li>
+        </ul>
+
+        <p class="muted">
+          데이터 흐름을 이해하는 기획의 중요성을 체감한 프로젝트
+        </p>
+      </div>
+    </div>
+
   </div>
 
 </body>
